# sqlite_wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_project.sh
scripts/: build.sh  test.sh
src/cpp/: CMakeLists.txt
src/cpp/src/: sqlite_wrapper.cpp
src/python/sqlite/: wrapper.py
tests/cpp/: CMakeLists.txt
tests/cpp/integration/: CMakeLists.txt
tests/cpp/unit/: CMakeLists.txt  test_wrapper.cpp
ui/: app.py  readme.md  requirements.txt
